num2words dependency is removed by implementing the solution

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -353,53 +353,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['sabah', 'üç', 'yumurta', 'yedim']"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n.convert_number_to_word(\"sabah 3 yumurta yedim\".split())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'merhaba guzel yılkı atı'"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "n.remove_accent_marks(\"merhâbâ gûzel yîlkî atî\")"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['kasıtlı', 'yazım', 'hatası']"
+       "['sabah',\n",
+       " 'üç',\n",
+       " 'yumurta',\n",
+       " 'yedim',\n",
+       " 've',\n",
+       " 'tartıldığımda',\n",
+       " 'bir',\n",
+       " 'virgül',\n",
+       " 'on',\n",
+       " 'beş',\n",
+       " 'kilogram',\n",
+       " 'aldığımı',\n",
+       " 'gördüm']"
       ]
      },
      "execution_count": 18,
@@ -408,25 +380,32 @@
     }
    ],
    "source": [
+    "n.convert_number_to_word(\"sabah 3 yumurta yedim ve tartıldığımda 1.15 kilogram aldığımı gördüm\".split())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n.remove_accent_marks(\"merhâbâ gûzel yîlkî atî\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "n.correct_typos(\"kasssıtllı yazişm hatasıı\".split())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['bakarken']"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "n.correct_typos(\"bakarıekn\".split())"
    ]
