--- a/pp/turkish_embeddings/example.ipynb
+++ b/pp/turkish_embeddings/example.ipynb
@@ -11,16 +11,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = Word2Vec.load('Word2Vec.model')"
+    "model = Word2Vec.load('Word2Vec_large.model')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
        " ('vader', 0.5258742570877075)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
