update to tokenization.

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -110,8 +110,7 @@
        " 'de+Conj',\n",
        " 'güvenlik+Noun+A3sg+P3sg+Nom',\n",
        " 'hak+Noun+A3sg+Pnon+Nom',\n",
-       " 'et+Verb+Pos+Aor+A3pl',\n",
-       " '.+Punc',\n",
+       " 'ederler.+Unknown',\n",
        " 'benjamin+Noun+A3sg+Pnon+Nom',\n",
        " 'franklin+Noun+A3sg+Pnon+Nom']"
       ]
@@ -152,6 +151,59 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['\"+Punc',\n",
+       " 'ol+Verb+Pos+Fut+A3sg',\n",
+       " 'iş+Noun+A3sg+Pnon+Nom',\n",
+       " 'değil+Conj',\n",
+       " 'ya+Interj',\n",
+       " '!+Punc',\n",
+       " '\"+Punc',\n",
+       " 'diye+Postp+PCNom',\n",
+       " 'bağır+Verb+Pos+Past+A3sg',\n",
+       " '.+Punc']"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sa.predict('\"Olacak iş değil ya!\" diye bağırdı.')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['Bolu+Noun+Prop+A3sg+Pnon+Dat',\n",
+       " 've+Conj',\n",
+       " 'Karacabey+Noun+Prop+A3sg+Pnon+Dat',\n",
+       " 'git+Verb+Pos+Fut+A1pl',\n",
+       " '...+Punc']"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sa.predict(\"Bolu'ya ve Karacabey'e gideceğiz...\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -160,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -170,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +253,7 @@
        " ('.', 'O')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +289,7 @@
        " ('kalacak', 'O')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -248,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +329,7 @@
        " ('.', 'O')]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
