small bugfix in dp and pos word preprocessing

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        " ('.', 'O')]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,32 +357,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1, 'Onun', 6, 'obl'),\n",
+       "[(1, 'Onun', 5, 'obl'),\n",
        " (2, 'için', 1, 'case'),\n",
-       " (3, 'yol', 4, 'nmod:poss'),\n",
-       " (4, 'arkadaşlarımızı', 6, 'obj'),\n",
-       " (5, 'titizlikle', 6, 'advmod'),\n",
-       " (6, 'seçer', 0, 'root'),\n",
+       " (3, 'yol', 1, 'nmod'),\n",
+       " (4, 'arkadaşlarımızı', 5, 'obj'),\n",
+       " (5, 'titizlikle', 6, 'obl'),\n",
+       " (6, 'seçer', 7, 'acl'),\n",
        " (7, ',', 10, 'punct'),\n",
        " (8, 'kendilerini', 10, 'obj'),\n",
-       " (9, 'iyice', 10, 'advmod'),\n",
-       " (10, 'sınarız', 6, 'conj'),\n",
+       " (9, 'iyice', 8, 'advmod'),\n",
+       " (10, 'sınarız', 0, 'root'),\n",
        " (11, '.', 10, 'punct')]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "dp.predict(\"Onun için yol arkadaşlarımızı titizlikle seçer, kendilerini iyice sınarız.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Part of Speech Tagger"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pp.part_of_speech_tagger import PoSTagger\n",
+    "pos = PoSTagger()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Vapurla', 'NOUN'),\n",
+       " (\"Beşiktaş'a\", 'PROPN'),\n",
+       " ('geçip', 'ADV'),\n",
+       " ('yürüyerek', 'ADV'),\n",
+       " ('Maçka', 'PROPN'),\n",
+       " (\"Parkı'na\", 'NOUN'),\n",
+       " ('ulaştım', 'VERB'),\n",
+       " ('.', 'PUNCT')]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos.predict(\"Vapurla Beşiktaş'a geçip yürüyerek Maçka Parkı'na ulaştım.\")"
    ]
   },
   {
@@ -402,7 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,27 +568,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['kasıtlı', 'yazım', 'hatası']"
+       "['kasıtlı', 'yazım', 'hatası', 'kasıtlı', 'yazım', 'hatası']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "n.correct_typos(\"kasssıtllı yazişm hatasıı\".split())"
+    "n.correct_typos(\"kasssıtllı yazişm hatasıı kasıştlış yazışm hatassı\".split())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +597,7 @@
        "['bakarken']"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
