examples updated with dp and pos

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -132,7 +132,7 @@
     {
      "data": {
       "text/plain": [
-       "['Ahmet+Noun+Prop+A3sg+Pnon+Nom',\n",
+       "['ahmet+Noun+Prop+A3sg+Pnon+Nom',\n",
        " 'o+Det',\n",
        " 'yol+Noun+A3sg+Pnon+Abl',\n",
        " 'gir+Verb+Neg+Desr+A2sg',\n",
@@ -187,9 +187,9 @@
     {
      "data": {
       "text/plain": [
-       "['Bolu+Noun+Prop+A3sg+Pnon+Dat',\n",
+       "['bolu+Noun+Prop+A3sg+Pnon+Dat',\n",
        " 've+Conj',\n",
-       " 'Karacabey+Noun+Prop+A3sg+Pnon+Dat',\n",
+       " 'karacabey+Noun+Prop+A3sg+Pnon+Dat',\n",
        " 'git+Verb+Pos+Fut+A1pl',\n",
        " '...+Punc']"
       ]
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -253,7 +253,7 @@
        " ('.', 'O')]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -289,7 +289,7 @@
        " ('kalacak', 'O')]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,14 +300,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('Meryem', 'PER'),\n",
-       " ('Beşer', 'PER'),\n",
        " ('ile', 'O'),\n",
        " ('birlikte', 'O'),\n",
        " ('önce', 'O'),\n",
@@ -329,13 +328,13 @@
        " ('.', 'O')]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ner.predict(\"Meryem Beşer ile birlikte önce Bursa'ya oradan da İzmir'e gittik, haftasonunu Foça'da geçirdik.\")"
+    "ner.predict(\"Meryem ile birlikte önce Bursa'ya oradan da İzmir'e gittik, haftasonunu Foça'da geçirdik.\")"
    ]
   },
   {
@@ -347,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -357,32 +356,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 40,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(1, 'Onun', 5, 'obl'),\n",
-       " (2, 'için', 1, 'case'),\n",
-       " (3, 'yol', 1, 'nmod'),\n",
-       " (4, 'arkadaşlarımızı', 5, 'obj'),\n",
-       " (5, 'titizlikle', 6, 'obl'),\n",
-       " (6, 'seçer', 7, 'acl'),\n",
-       " (7, ',', 10, 'punct'),\n",
-       " (8, 'kendilerini', 10, 'obj'),\n",
-       " (9, 'iyice', 8, 'advmod'),\n",
-       " (10, 'sınarız', 0, 'root'),\n",
-       " (11, '.', 10, 'punct')]"
+       "[(1, \"Maltepe'nin\", 2, 'nmod'),\n",
+       " (2, 'turlamak', 5, 'nmod'),\n",
+       " (3, 'için', 2, 'case'),\n",
+       " (4, 'güzel', 5, 'amod'),\n",
+       " (5, 'bir', 7, 'nmod'),\n",
+       " (6, 'sahil', 7, 'nmod'),\n",
+       " (7, 'yolu', 12, 'root'),\n",
+       " (8, ',', 7, 'punct'),\n",
+       " (9, 'bir', 12, 'advmod'),\n",
+       " (10, 'de', 7, 'case'),\n",
+       " (11, \"Dragos'u\", 10, 'obj'),\n",
+       " (12, 'var', 7, 'conj'),\n",
+       " (13, '.', 12, 'punct')]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dp.predict(\"Onun için yol arkadaşlarımızı titizlikle seçer, kendilerini iyice sınarız.\")"
+    "dp.predict(\"Maltepe'nin turlamak için güzel bir sahil yolu, bir de Dragos'u var.\")"
    ]
   },
   {
@@ -394,7 +397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -404,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -420,13 +423,83 @@
        " ('.', 'PUNCT')]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pos.predict(\"Vapurla Beşiktaş'a geçip yürüyerek Maçka Parkı'na ulaştım.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Hafta', 'NOUN'),\n",
+       " ('sonu', 'NOUN'),\n",
+       " ('yaklaşırken', 'ADV'),\n",
+       " (',', 'PUNCT'),\n",
+       " ('cumartesi', 'NOUN'),\n",
+       " ('günü', 'NOUN'),\n",
+       " ('etkinliği', 'NOUN'),\n",
+       " ('için', 'ADP'),\n",
+       " (\"Kadıköy'deki\", 'PROPN'),\n",
+       " ('Viktor', 'PROPN'),\n",
+       " (\"Levi'ye\", 'PROPN'),\n",
+       " ('gitmeye', 'NOUN'),\n",
+       " ('karar', 'NOUN'),\n",
+       " ('verdik', 'VERB'),\n",
+       " ('.', 'PUNCT')]"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos.predict(\"Hafta sonu yaklaşırken, cumartesi günü etkinliği için Kadıköy'deki Viktor Levi'ye gitmeye karar verdik.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('Pek', 'ADV'),\n",
+       " ('çok', 'DET'),\n",
+       " ('popüler', 'ADJ'),\n",
+       " ('filmde', 'NOUN'),\n",
+       " ('başrol', 'NOUN'),\n",
+       " ('oynamış', 'VERB'),\n",
+       " ('olsa', 'VERB'),\n",
+       " ('da', 'CCONJ'),\n",
+       " (',', 'PUNCT'),\n",
+       " ('Christian', 'PROPN'),\n",
+       " (\"Bale'in\", 'PROPN'),\n",
+       " ('en', 'ADV'),\n",
+       " ('sevdiğim', 'ADJ'),\n",
+       " ('filmi', 'NOUN'),\n",
+       " ('American', 'PROPN'),\n",
+       " ('Psycho', 'PROPN'),\n",
+       " ('.', 'PUNCT')]"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos.predict(\"Pek çok popüler filmde başrol oynamış olsa da, Christian Bale'in en sevdiğim filmi American Psycho.\")"
    ]
   },
   {
@@ -446,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -465,7 +538,7 @@
        "'test karakterleri: iığüöşç'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +549,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -485,7 +558,7 @@
        "'noktalamalıtestcümlesidir'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -496,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +578,7 @@
        "['böyle', 'şey', 'görmedim', 'duymadım']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -537,7 +610,7 @@
        " 'gördüm']"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -548,7 +621,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -557,7 +630,7 @@
        "'merhaba guzel yılkı atı'"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -568,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -577,7 +650,7 @@
        "['kasıtlı', 'yazım', 'hatası', 'kasıtlı', 'yazım', 'hatası']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -588,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -597,7 +670,7 @@
        "['bakarken']"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -625,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +708,7 @@
        " 'Bu harika bir haber!']"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -646,7 +719,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -655,7 +728,7 @@
        "['4. Murat, diğer yazım şekli ile IV. Murat, alkollü içecekleri halka yasaklamıştı.']"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +749,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -686,7 +759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +768,7 @@
        "['bugün', 'kahvaltıda', 'kahve', 'çay', 'içsem', 'süt', 'içeyim']"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -707,7 +780,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -717,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -726,7 +799,7 @@
        "['ama', 'aşı', 'gelip', 'eve']"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -737,7 +810,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -755,7 +828,7 @@
        "['önemli', 'demiş', 'miydim']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -773,7 +846,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -782,35 +855,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('saruman', 0.7291593551635742),\n",
-       " ('thorin', 0.6473978161811829),\n",
-       " ('aragorn', 0.6401687264442444),\n",
-       " ('isengard', 0.6123237013816833),\n",
-       " ('orklar', 0.59786057472229),\n",
-       " ('gollum', 0.5905635952949524),\n",
-       " ('baggins', 0.5837421417236328),\n",
-       " ('frodo', 0.5819021463394165),\n",
-       " ('belgarath', 0.5811135172843933),\n",
-       " ('sauron', 0.5763844847679138),\n",
-       " ('elfler', 0.5758092999458313),\n",
-       " ('bilbo', 0.5729959607124329),\n",
-       " ('tyrion', 0.5728499889373779),\n",
-       " ('rohan', 0.556411862373352),\n",
-       " ('lancelot', 0.5517111420631409),\n",
-       " ('mordor', 0.550175130367279),\n",
-       " ('bran', 0.5482109189033508),\n",
-       " ('goblin', 0.5393625497817993),\n",
-       " ('thor', 0.5280926823616028),\n",
-       " ('vader', 0.5258742570877075)]"
+       "[('saruman', 0.7153398394584656),\n",
+       " ('geralt', 0.6540620923042297),\n",
+       " ('aragorn', 0.6260802149772644),\n",
+       " ('thorin', 0.613937258720398),\n",
+       " ('orklar', 0.5860564112663269),\n",
+       " ('gollum', 0.5781465768814087),\n",
+       " ('tyrion', 0.5738440155982971),\n",
+       " ('sauron', 0.5715942978858948),\n",
+       " ('frodo', 0.5662911534309387),\n",
+       " ('lancelot', 0.5607389211654663),\n",
+       " ('elfler', 0.5591437816619873),\n",
+       " ('bilbo', 0.5585811138153076),\n",
+       " ('mordor', 0.5550921559333801),\n",
+       " ('baggins', 0.5519346594810486),\n",
+       " ('belgarath', 0.5489327311515808),\n",
+       " ('titanlar', 0.5449507832527161),\n",
+       " ('bran', 0.5402933359146118),\n",
+       " ('asgard', 0.5372824668884277),\n",
+       " ('thor', 0.5362329483032227),\n",
+       " ('uther', 0.5343433618545532)]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,35 +896,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('kayalardan', 0.8601457476615906),\n",
-       " ('kayalıklardan', 0.8567330837249756),\n",
-       " ('tepelerden', 0.8423191905021667),\n",
-       " ('ormanlardan', 0.8362939357757568),\n",
-       " ('dağlardan', 0.8140010833740234),\n",
-       " ('amaçlardan', 0.810560405254364),\n",
-       " ('bloklardan', 0.803180992603302),\n",
-       " ('otlardan', 0.8026642203330994),\n",
-       " ('kısımlardan', 0.7993910312652588),\n",
-       " ('ağaçlardan', 0.7961613535881042),\n",
-       " ('dallardan', 0.7949419617652893),\n",
-       " ('sahalardan', 0.7865065932273865),\n",
-       " ('adalardan', 0.7819225788116455),\n",
-       " ('sulardan', 0.7781057953834534),\n",
-       " ('taşlardan', 0.7746424078941345),\n",
-       " ('kuyulardan', 0.7689613103866577),\n",
-       " ('köşelerden', 0.7678262591362),\n",
-       " ('tünellerden', 0.7674043774604797),\n",
-       " ('atlardan', 0.7657977342605591),\n",
-       " ('kanatlardan', 0.7640945911407471)]"
+       "[('kayalardan', 0.8831543326377869),\n",
+       " ('tepelerden', 0.8753724694252014),\n",
+       " ('kayalıklardan', 0.8729402422904968),\n",
+       " ('ormanlardan', 0.8672202229499817),\n",
+       " ('dağlardan', 0.8540675044059753),\n",
+       " ('otlardan', 0.8288434147834778),\n",
+       " ('kısımlardan', 0.8267730474472046),\n",
+       " ('ağaçlardan', 0.8248404860496521),\n",
+       " ('amaçlardan', 0.8242634534835815),\n",
+       " ('bloklardan', 0.820052444934845),\n",
+       " ('adalardan', 0.8200141191482544),\n",
+       " ('sahalardan', 0.8146253824234009),\n",
+       " ('dallardan', 0.8107085824012756),\n",
+       " ('kuyulardan', 0.80833500623703),\n",
+       " ('oralardan', 0.8079319000244141),\n",
+       " ('tünellerden', 0.8079005479812622),\n",
+       " ('sulardan', 0.8050841689109802),\n",
+       " ('köşelerden', 0.8049306869506836),\n",
+       " ('tarlalardan', 0.8024468421936035),\n",
+       " ('pisliklerden', 0.800993025302887)]"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
