DP and POS init 2x speedup

--- a/Examples.ipynb
+++ b/Examples.ipynb
@@ -348,7 +348,15 @@
    "cell_type": "code",
    "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 10.4 s\n"
+     ]
+    }
+   ],
    "source": [
     "from pp.dependency_parser import DependencyParser\n",
     "dp = DependencyParser()"
@@ -356,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 14,
    "metadata": {
     "scrolled": true
    },
@@ -379,7 +387,7 @@
        " (13, '.', 12, 'punct')]"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
